--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="flex items-center justify-between">
                 <!-- Logo -->
                 <div class="pt-2 ">
-                    <img src="/images/Restaurant-logo.svg" alt="logo" />
+                    <img src="./images/Restaurant-logo.svg" alt="logo" />
                 </div>
                 <!-- Menu Items -->
                 <div class="hidden space-x-6 md:flex">
