modified some  html files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header class="fixed inset-0 bg-slate-200 z-40 ">
-        <!-- Navbar -->
+        <!------------------------------- Navbar ---------------------------------------------------->
         <nav class="relative container mx-auto p-6  -mt-9 ">
             <!-- Flex container -->
             <div class="flex items-center justify-between">
@@ -45,7 +45,7 @@
 
 
                 <!-- Mobile Menu -->
-                <div class=" relative flex justify-end -mt-10 md:hidden">
+                <div class=" relative flex justify-end -mt-10 md:hidden sm:my-auto">
 
                     <div class="dropdown dropdown-hover dropdown-bottom dropdown-end">
                         <div tabindex="0" role="button"
@@ -65,7 +65,7 @@
     </header>
     <main>
         <section>
-            <!-- Hero Section -->
+            <!--------------------------------------- Hero Section -------------------------------------------------->
             <div class="hero min-h-screen " style="background-image: url(./images/hero-section-image.jpg);">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-neutral-content text-center">
@@ -91,7 +91,7 @@
 
 
         </section>
-        <!-- Menu-section -->
+        <!----------------------------------------------- Food Menu-section --------------------------------------->
         <section id="food-menu" class="bg-lightPinkColor">
             <h2 class="my-14 text-3xl font-bold text-center">Our Menu</h2>
 
@@ -136,7 +136,7 @@
                             </td>
                             <td>6$ - 15$</td>
                             <th>
-                                <button class="btn btn-ghost btn-xs">details</button>
+
                             </th>
                         </tr>
                         <!-- row 2 -->
@@ -165,7 +165,7 @@
                             </td>
                             <td>20$ - 30$</td>
                             <th>
-                                <button class="btn btn-ghost btn-xs">details</button>
+
                             </th>
                         </tr>
                         <!-- row 3 -->
@@ -194,7 +194,7 @@
                             </td>
                             <td>4$ - 10$</td>
                             <th>
-                                <button class="btn btn-ghost btn-xs">details</button>
+
                             </th>
                         </tr>
                         <!-- row 4 -->
@@ -224,23 +224,20 @@
                             </td>
                             <td>2$ - 20$</td>
                             <th>
-                                <button class="btn btn-ghost btn-xs">details</button>
+
                             </th>
                         </tr>
                     </tbody>
-                    <!-- foot -->
-                    <tfoot>
 
-                    </tfoot>
                 </table>
             </div>
         </section>
-        <!-- Top 5 dishes -->
+        <!----------------------------------------------------- Top 5 dishes --------------------------------------------->
         <section class="my-10  " id="dishes">
             <h2 class="my-14 text-3xl font-bold text-center">Top 5 Signature Dishes</h2>
 
             <div class="row items-center md:flex  justify-center  gap-5 mb-10">
-                <!-- Dish 1 -->
+                <!----------------------------------------------- Dish 1 ------------------------------------------------->
                 <div class="card card-compact bg-base-100   w-96    shadow-xl col-4 mb-6 dish-cards ">
                     <figure>
                         <img src="./images/Baon Bun.png" alt="Shushi dish" />
@@ -254,14 +251,14 @@
                             including seafood, vegetables, and occasionally tropical fruits.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
                                 <a href="https://www.youtube.com/watch?v=joweUxpHaqc" target="_blank">Video
                                     with Recipe</a>
                             </button>
                         </div>
                     </div>
                 </div>
-                <!-- Dish 2 -->
+                <!------------------------------------------------ Dish 2 ---------------------------------------------------------------->
                 <div class="card card-compact bg-base-100 w-96 shadow-xl col-4 mb-6 dish-cards ">
                     <figure>
                         <img src="./images/Noodles-plate.png" alt="Noodles" />
@@ -275,13 +272,13 @@
                             preparations. They are typically made from wheat, rice, or starch.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
                                 <a href="https://youtu.be/F-tw8YGGQu0" target="_blank"></a>Check this video
                             </button>
                         </div>
                     </div>
                 </div>
-                <!-- Dish 3 -->
+                <!---------------------------------------------------- Dish 3 ------------------------------------------------------->
                 <div class="card card-compact bg-base-100 w-96 shadow-xl col-4 mb-6  dish-cards">
                     <figure>
                         <img src="./images/Soup.png" alt="Chunky Soups" />
@@ -297,7 +294,7 @@
                         </p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
                                 <a href="https://youtu.be/ck9qdj_d_4s"> Video Showing Recipe</a> </button>
                         </div>
                     </div>
@@ -306,7 +303,7 @@
 
             <div class="row  md:flex  justify-center  gap-5">
 
-                <!-- Dish 4 -->
+                <!------------------------------------------------------- Dish 4 ----------------------------------------------->
                 <div class="card card-compact bg-base-100 w-96 shadow-xl col-6 mb-6  dish-cards ">
                     <figure>
                         <img src="./images/wool bowl.png" alt="woo  bowl dish" />
@@ -319,7 +316,7 @@
                             soft-cooked egg. It is described as "instant comfort food" and is easy to prepare.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
                                 <a href="https://youtu.be/jAQXONAfh3g"> Video
                                     showing Recipe
                                 </a>
@@ -327,7 +324,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- dish 5 -->
+                <!----------------------------------------------- dish 5 --------------------------------------------------------->
                 <div class="card card-compact bg-base-100 w-96 shadow-xl  col-6 mb-6 dish-cards ">
                     <figure>
                         <img src="./images/Soup.png" alt="pizza" />
@@ -341,7 +338,7 @@
                             flavorful broth.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
                                 <a href="">Video with a Recipe</a>
                             </button>
                         </div>
@@ -352,7 +349,7 @@
 
 
         </section>
-        <!-- Make a Reservation section -->
+        <!---------------------------------- Make a Reservation section -------------------------------------------------->
         <section class="bg-warmDarkColor" id="reservation">
             <div class=" justify-center p-10 text-white text-center">
                 <h2 class="py-4 mb-6">RESERVATION</h2>
@@ -366,12 +363,12 @@
                 </a>
             </div>
         </section>
-        <!-- Contact Us Section -->
+        <!-- ----------------------------------------- Contact Us Section ----------------------------------------->
         <section id="contact" class=" bg-lightPinkColor w-full mx-auto">
             <h2 class="my-14 text-3xl font-bold text-center">Contact Us</h2>
-            <div class="hero w-full max-h-screen p-20 -mt-20">
+            <div class="hero w-full max-h-screen p-20 -mt-20 sm:mx-auto">
                 <div class="hero-content flex-col justify-center gap-x-16 md:flex-row-reverse">
-                    <div class="text-center lg:text-left w-full">
+                    <div class="text-center lg:text-left w-full ">
                         <h1 class="text-3xl font-bold">Reach out to us</h1>
                         <p class="p-6 w-full sm:w-full">
                             Physical Address: Makindye Opposite High Court. <br>
@@ -405,7 +402,7 @@
                             </div>
                             <div class="form-control mt-6">
                                 <button
-                                    class="btn bg-warmBoldRedish text-white hover:bg-warmBoldOrangish">Login</button>
+                                    class="btn bg-warmBoldRedish text-white hover:bg-warmBoldOrangish">Submit</button>
                             </div>
                         </form>
                     </div>
@@ -414,7 +411,7 @@
 
         </section>
     </main>
-    <!-- Footer Section -->
+    <!------------------------------------ Footer Section ------------------------------------------------>
     <footer class="footer footer-center bg-base-200 text-base-content rounded p-10">
         <nav class="grid grid-flow-col gap-4">
             <a href="#food-menu" class="link link-hover"> Our Menu</a>
@@ -450,7 +447,7 @@
             </div>
         </nav>
         <aside>
-            <p>Copyright © 2024 - All right reserved by Sushi Restaurant</p>
+            <p>Copyright © 2024 - All rights reserved by Sushi Restaurant</p>
         </aside>
     </footer>
 </body>
