--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             including seafood, vegetables, and occasionally tropical fruits.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-3/4 check-btn">
                                 <a href="https://www.youtube.com/watch?v=joweUxpHaqc" target="_blank">Video
                                     with Recipe</a>
                             </button>
@@ -272,7 +272,7 @@
                             preparations. They are typically made from wheat, rice, or starch.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-3/4 check-btn">
                                 <a href="https://youtu.be/F-tw8YGGQu0" target="_blank"></a>Check this video
                             </button>
                         </div>
@@ -294,7 +294,7 @@
                         </p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-3/4 check-btn">
                                 <a href="https://youtu.be/ck9qdj_d_4s"> Video Showing Recipe</a> </button>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
                             soft-cooked egg. It is described as "instant comfort food" and is easy to prepare.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-3/4 check-btn">
                                 <a href="https://youtu.be/jAQXONAfh3g"> Video
                                     showing Recipe
                                 </a>
@@ -338,7 +338,7 @@
                             flavorful broth.</p>
                         <div class="card-actions justify-end">
                             <button
-                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-1/2 sm:w-full">
+                                class=" btn p-3   text-white bg-warmBoldOrangish  baseline hover:bg-warmBoldRedish  w-3/4 check-btn">
                                 <a href="">Video with a Recipe</a>
                             </button>
                         </div>
@@ -364,9 +364,9 @@
             </div>
         </section>
         <!-- ----------------------------------------- Contact Us Section ----------------------------------------->
-        <section id="contact" class=" bg-lightPinkColor w-full mx-auto">
+        <section id="contact" class=" bg-lightPinkColor w-full ">
             <h2 class="my-14 text-3xl font-bold text-center">Contact Us</h2>
-            <div class="hero w-full max-h-screen p-20 -mt-20 sm:mx-auto">
+            <div class="hero w-full max-h-screen py-10 -mt-24  sm:mx-auto ">
                 <div class="hero-content flex-col justify-center gap-x-16 md:flex-row-reverse">
                     <div class="text-center lg:text-left w-full ">
                         <h1 class="text-3xl font-bold">Reach out to us</h1>
@@ -377,7 +377,7 @@
 
                         </p>
                     </div>
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl sm:mb-20">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
