modified some  html files

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         </section>
         <!----------------------------------------------- Food Menu-section --------------------------------------->
-        <section id="food-menu" class="bg-lightPinkColor">
+        <section id="food-menu" class="bg-lightPinkColor ">
             <h2 class="my-14 text-3xl font-bold text-center">Our Menu</h2>
 
 
@@ -233,7 +233,7 @@
             </div>
         </section>
         <!----------------------------------------------------- Top 5 dishes --------------------------------------------->
-        <section class="my-10  " id="dishes">
+        <section class="my-10  h-full" id="dishes">
             <h2 class="my-14 text-3xl font-bold text-center">Top 5 Signature Dishes</h2>
 
             <div class="row items-center md:flex  justify-center  gap-5 mb-10">
@@ -350,7 +350,7 @@
 
         </section>
         <!---------------------------------- Make a Reservation section -------------------------------------------------->
-        <section class="bg-warmDarkColor" id="reservation">
+        <section class="bg-warmDarkColor h-full" id="reservation">
             <div class=" justify-center p-10 text-white text-center">
                 <h2 class="py-4 mb-6">RESERVATION</h2>
                 <h1 class="text-white py-2 mb-6 text-4xl"><span class="text-warmBoldRedish">Book </span> a table</h1>
@@ -364,9 +364,9 @@
             </div>
         </section>
         <!-- ----------------------------------------- Contact Us Section ----------------------------------------->
-        <section id="contact" class=" bg-lightPinkColor w-full ">
-            <h2 class="my-14 text-3xl font-bold text-center">Contact Us</h2>
-            <div class="hero w-full max-h-screen py-10 -mt-24  sm:mx-auto ">
+        <section id="contact" class=" bg-lightPinkColor w-full  h-full">
+            <h2 class="my-32 text-3xl font-bold text-center ">Contact Us</h2>
+            <div class="hero w-full max-h-screen py-10 -mt-16  sm:mx-auto ">
                 <div class="hero-content flex-col justify-center gap-x-16 md:flex-row-reverse">
                     <div class="text-center lg:text-left w-full ">
                         <h1 class="text-3xl font-bold">Reach out to us</h1>
